# pnitools

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  ProjectHome.md  RELEASE_NOTES  SConstruct  TODO  WIXSetPath.wxs  conanfile.txt  desy.fsec.pnitools.manifest.in
configure/: CMakeLists.txt  CheckTypeSize.txt  SConscript  bind_test.cpp  compiler_checks.py  constexpr_test.cpp  enum_bug_test.cpp  foreach_test.cpp  lambda_function_test.cpp  nullptr_test.cpp  random_test.cpp  template_alias_test.cpp
configure/src/: explicit_conversion_test.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.Devel  Doxyfile.Programs  DoxygenLayout.xml  README_DEVELOPERS  SphinxMakefile  common_devel  data_providers.dia  datgen_devel  det2nx  det2nx_devel  detinfo  detops  devel_mainpage  doxygroups.dox  mainpage  mcaops  mcaops.1  mcaops_devel  mcatool_design.txt  nxls_devel  nxtee_devel
doc/info/: .gitignore  CMakeLists.txt  datgen.texi  det2nx.texi  detinfo.texi  detops.texi  input_files.texi  mcaops.texi  nexus_path.texi  numeric_ranges.texi  nx2xml.texi  nxcat.texi  nxls.texi  nxtee.texi  pnitools.txi  rois.texi  top_node.texi  xml2nx.texi
doc/man/: CMakeLists.txt  SConscript  datgen.1  det2nx.1  det2nx.1.cmake  detinfo.1  detinfo.1.cmake  detops.1  detops.1.cmake  mcaops.1.cmake  nxcat.1  nxcat.1.cmake  nxls.1  nxls.1.cmake  pni-tools.1  xml2nx.1
doc/source/: CMakeLists.txt  command_line_tools.rst  conf.py  det2nx.rst  developer_documentation.rst  general_concepts.rst  index.rst  installation.rst  overview.rst
src/common/: CMakeLists.txt  ConfigArgument.hpp  ConfigOption.hpp  DataStack.cpp  DataStack.hpp  DetectorReader.cpp  DetectorReader.hpp  Exceptions.cpp  Exceptions.hpp  File.cpp  File.hpp  FileList.cpp  FileList.hpp  NXObjectPath.cpp  NXObjectPath.hpp  ProgramConfig.cpp  ProgramConfig.hpp  SConscript  array_utils.cpp  array_utils.hpp  cli_args.cpp  cli_args.hpp  column.hpp  config_argument.hpp  config_option.hpp  config_utils.cpp  config_utils.hpp  exceptions.cpp  exceptions.hpp  field_io.cpp  field_io.hpp  file.cpp  file.hpp  file_list.cpp  file_list.hpp  file_list_parser.hpp  file_queue.hpp  file_type.cpp  file_type.hpp  file_utils.cpp  (+40 more)
src/datgen/: CMakeLists.txt  datgen.cpp  datgen.exe.manifest.in  datgen_utils.cpp  datgen_utils.hpp  grid_generator.cpp  grid_generator.hpp  grid_generator_builder.cpp  grid_generator_builder.hpp  options_splitter.cpp  options_splitter.hpp
src/detinfo/: CMakeLists.txt  DetInfoConfig.cpp  DetInfoConfig.hpp  SConscript  cbf_info_reader.cpp  cbf_info_reader.hpp  config.cpp  config.hpp  csv_output_formatter.cpp  csv_output_formatter.hpp  detector_info.cpp  detector_info.hpp  detector_info_reader.hpp  detector_layout.cpp  detector_layout.hpp  detinfo.cpp  detinfo.exe.manifest.in  formatter_factory.cpp  formatter_factory.hpp  key_value_output_formatter.cpp  key_value_output_formatter.hpp  main.cpp  nexus_info_reader.cpp  nexus_info_reader.hpp  output_formatter.cpp  output_formatter.hpp  simple_output_formatter.cpp  simple_output_formatter.hpp  text_output_formatter.cpp  text_output_formatter.hpp  tiff_info_reader.cpp  tiff_info_reader.hpp  types.hpp  utils.cpp  utils.hpp  xml_output_formatter.cpp  xml_output_formatter.hpp
src/detops/: AverageOperation.hpp  CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  MaxOperation.hpp  MinOperation.hpp  Operation.cpp  Operation.hpp  OperationDispatcher.cpp  OperationDispatcher.hpp  ProgramConfig.cpp  ProgramConfig.hpp  ROI.cpp  ROI.hpp  ROIRange.cpp  SConscript  SumOperation.hpp  add_image.hpp  config.cpp  detops.cpp  detops.hpp  image_op_base.cpp  image_op_base.hpp  image_processor.cpp  image_processor.hpp  integrate.cpp  integrate.hpp  io_utils.cpp  io_utils.hpp  main.cpp  maximum.cpp  maximum.hpp  minimum.cpp  minimum.hpp  operations.cpp  operations.hpp  roi_utils.cpp  roi_utils.hpp  types.hpp
src/detview/: .gitignore  CMakeLists.txt  ColorMaps.hpp  DetectorData.cpp  DetectorData.hpp  DetectorPlotWidget.cpp  DetectorPlotWidget.hpp  IntensityRange.cpp  IntensityRange.hpp  IntensityRangeWidget.cpp  IntensityRangeWidget.hpp  MainWidget.cpp  MainWidget.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp  SConscript  config_utils.cpp  detview.cpp  detview.hpp  gen_colormaps_header.py  main.cpp  plot.cpp  plot.hpp
src/mcaops/: .gitignore  CMakeLists.txt  MaxOperator.hpp  Operator.hpp  RebinOperator.hpp  SConscript  ScaleOperator.hpp  SumOperator.hpp  command.cpp  command.hpp  command_predicate.cpp  command_predicate.hpp  dump_operation.hpp  io.cpp  io.hpp  main.cpp  max_operation.hpp  mcaops.cpp  mcaops.hpp  mcaops_utils.cpp  operation.cpp  operation.hpp  operation_factory.cpp  operation_factory.hpp  rebin_operation.cpp  rebin_operation.hpp  scale_operation.cpp  scale_operation.hpp  sum_operation.cpp  sum_operation.hpp  types.hpp  utils.cpp  utils.hpp
src/nx2xml/: .gitignore  CMakeLists.txt  SConscript  nx2xml.cpp  nx2xml.hpp  nx2xml_utils.cpp  xml_utils.cpp  xml_utils.hpp
src/nxcat/: .gitignore  CMakeLists.txt  SConscript  array_h5_support.hpp  main.cpp  nxcat.cpp  nxcat.exe.manifest.in  nxcat.hpp  nxcat_attribute.cpp  nxcat_dataset.cpp  nxcat_util.cpp
src/nxls/: .gitignore  CMakeLists.txt  SConscript  attribute_metadata.cpp  attribute_metadata.hpp  attribute_record_builder.cpp  attribute_record_builder.hpp  column_widths.hpp  config.cpp  config.hpp  (+40 more)
test/: CMakeLists.txt  SConscript  array_utils_test.cpp  check_output.py  command_fixture.cpp  command_fixture.hpp  command_runner.cpp  command_runner.hpp  compare.cpp  compare.hpp  config.hpp.in  det2nx.xml  det2nx_empty_detector.xml  det2nx_test.py  detector.xml  detinfo_test.py  detops_test.py  file_list_parser_test.cpp  file_list_parser_test.hpp  file_test.cpp  get_attribute_test.cpp  get_attribute_test.hpp  get_child_test.cpp  get_child_test.hpp  get_class_test.cpp  get_class_test.hpp  get_parent_test.cpp  get_parent_test.hpp  get_unit_test.cpp  get_unit_test.hpp  is_attribute_test.cpp  is_attribute_test.hpp  is_class_test.cpp  is_class_test.hpp  is_field_test.cpp  is_field_test.hpp  is_group_test.cpp  is_group_test.hpp  is_valid_test.cpp  is_valid_test.hpp  (+23 more)
(+411 files in other folders)
